--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=softwarearchitecture
-spring.datasource.url=jdbc:mysql://localhost:3306/{Nombre Base de Datos}?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/{Nombre_BaseDatos}?useSSL=false
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
